--- a/templates/man-params.mustache
+++ b/templates/man-params.mustache
@@ -5,4 +5,4 @@
       {{desc}}
 
 {{/parameters}}
-Run 'wp help <subcommand>' to get more information on a specific command.
+Run 'wp help <command>' to get more information on a specific command.
