Remove unnecessary alias check

--- a/templates/man.mustache
+++ b/templates/man.mustache
@@ -12,12 +12,12 @@
 
 	{{synopsis}}
 
-{{#has-alias}}
+{{#alias}}
 ## ALIAS
 
 	{{alias}}
 
-{{/has-alias}}
+{{/alias}}
 {{#has-subcommands}}
 ## SUBCOMMANDS
 
